# nanobot-webui

./: .gitignore  Dockerfile  LICENSE  README.md  README_vi.md  README_zh.md  docker-compose.yml  pyproject.toml  setup.py
docs/: RELEASE.md
web/: index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx
web/src/components/layout/: AppLayout.tsx  Header.tsx  MobileTopBar.tsx  Sidebar.tsx
web/src/components/shared/: StatusBadge.tsx
web/src/components/ui/: card.tsx
web/src/hooks/: useChannels.ts  useConfig.ts  useCron.ts  useMCP.ts  useProviders.ts  useSessions.ts  useSkills.ts
web/src/i18n/: index.ts  languages.ts
web/src/i18n/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  vi.json  zh-TW.json  zh.json
web/src/lib/: api.ts  channelIcons.ts  ws.ts
web/src/pages/: AgentSettings.tsx  Channels.tsx  Chat.tsx  CronJobs.tsx  Dashboard.tsx  Login.tsx  MCPServers.tsx  Providers.tsx  Settings.tsx  SystemConfig.tsx  Tools.tsx  Users.tsx
web/src/stores/: authStore.ts  chatStore.ts
web/src/theme/: ThemeProvider.tsx
webui/: __init__.py  __main__.py  cli.py
webui/api/: __init__.py  auth.py  channel_ext.py  deps.py  gateway.py  middleware.py  models.py  provider_meta.py  server.py  users.py
webui/api/routes/: __init__.py  auth.py  channels.py  config.py  cron.py  mcp.py  openai_proxy.py  providers.py  sessions.py  skills.py  users.py  ws.py
webui/patches/: __init__.py  channels.py  provider.py  session.py  skills.py
